@@ -5,12 +5,17 @@ TODO list for ph-scale (HTML5)
 IMPLEMENTATION
 
 HIGH
+- increase width of graph scales
+- add ticks that give a rough approximation of log scale, ala semi-log graph paper
+- swap location of zoom in/out buttons
+- change screen title: Solutions, Molecules, Custom
 - Custom: pH picker gets stuck (or crashes?) on iPad
 - Solutions: Reset All button doesn't reset graph
 - auto-fill animation is a little fast?
 - why is the scene messed up with RatioNode(...,{ strategy: 'canvas' }) ?
 - performance of 'H3O+/OH- ratio' feature
 - interactive graph seems to be crashing on iPad
+- add a break in the Linear graph, just below the arrow head
 
 MEDIUM
 - make linear scale wider, use larger fonts for ticks?
@@ -44,9 +49,9 @@ Solutions: How to indicate when values are off the scale of the Linear graph?
 
 Solutions: split the arrow head off of the Linear scale?
 
-Solutions: color and 'look' of zoom buttons?
-
 Solutions, Custom: Why are non-interactive graph indicators grayed out when their value is zero?
+    YY: Since the pH readout is also null (-), it makes sense that the corresponding graph would have a null readout as well
+    CM: then should graph indicators read '-' instead of '0'?
 
 Solutions, Custom: Make pH probe look like it's in the solution? If so, we'll need to revisit
 all colors to add transparency. And we'll need to reimplement the fluid the comes out of the dropper
